<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_buy"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Buy Feed" />
        <item
            android:id="@+id/nav_sell"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Sell Feed" />
        <item
            android:id="@+id/nav_post_sell"
            android:icon="@drawable/ic_action_name"
            android:title="Create Sell Post" />
        <item
            android:id="@+id/nav_post_buy"
            android:icon="@drawable/ic_action_name"
            android:title="Create Buy Post" />
        <item
            android:id="@+id/nav_profilepage"
            android:icon="@drawable/ic_menu_profile"
            android:title="Profile" />
    </group>


</menu>
