<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="50dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
                android:background="@drawable/background"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <com.facebook.login.widget.LoginButton
        android:id="@+id/signfacebook"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/connectfb"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:id="@+id/signup"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/signinbutton"
        android:layout_above="@+id/signfacebook"
        android:layout_centerHorizontal="true" />

</RelativeLayout>