...
        <EditText
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:ems="10"
            android:id="@+id/textEditForAdditionalInfo"
            android:layout_below="@id/additionalInfo"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:background="@color/lightGray"
            android:hint="@string/sell_hint" />

...
        <Button
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:id="@+id/submitButton"
            android:layout_below="@id/textEditForAdditionalInfo"
            android:layout_centerInParent="true"
            android:background="@color/darkGreen"
            android:layout_marginTop="60dp"/>


...
