...
                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:id="@+id/radioGroup1">

                    <RadioButton
                        android:id="@+id/sellFood"
                        android:text="@string/food"
                        style="@style/IconLabel"
                        android:gravity="top"
                        android:layout_gravity="center"
                        android:background="@drawable/finallyfood" />

...
